fix: wrapped the picture in a link in the section apartments

--- a/src/styles/components/button.css
+++ b/src/styles/components/button.css
@@ -20,16 +20,9 @@ button {
   color: white;
 }
 
-.button-img {
-  max-width: 40px;
-  width: 100%;
-  height: 40px;
-}
-
 .button-next {
   position: absolute;
-  max-width: 40px;
-  width: 100%;
+  width: 40px;
   height: 40px;
   background-color: var(--border-light-color);
   border-radius: 50%;
@@ -55,13 +48,8 @@ button {
     font-size: 22px;
   }
 
-  .button-img {
-    max-width: 30px;
-    height: 30px;
-  }
-
   .button-next {
-    max-width: 28px;
+    width: 28px;
     height: 28px;
   }
 
@@ -76,11 +64,6 @@ button {
     width: 100%;
     padding: 14px 25px;
     font-size: 19px;
-  }
-
-  .button-img {
-    max-width: 28px;
-    height: 28px;
   }
 
   .button-next__icon {
